force-app/main/default/objects/Site_Development_AT_T__c/Site_Development_AT_T__c.object-meta.xml
<CustomObject>
    <label>Site Development AT&amp;T</label>
    <nameField>
        <label>Project ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Site Development AT&amp;T</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>