force-app/main/default/objects/Site_Development_AT_T__c/fields/ABM_Project_Type__c.field-meta.xml
<CustomField>
    <fullName>ABM_Project_Type__c</fullName>
    <formula>TEXT(Project__r.ABM_Project_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ABM Project Type</label>
    <type>Text</type>
</CustomField>