force-app/main/default/objects/Site_Development_AT_T__c/fields/Agreement__c.field-meta.xml
<CustomField>
    <fullName>Agreement__c</fullName>
    <formula>Text(Project__r.Agreement__c)</formula>
    <label>Agreement</label>
    <type>Text</type>
</CustomField>