force-app/main/default/objects/Site_Development_AT_T__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <formula>Text(Project__r.Category__c)</formula>
    <label>Category</label>
    <type>Text</type>
</CustomField>