force-app/main/default/objects/Site_Development_AT_T__c/fields/Project_Template__c.field-meta.xml
<CustomField>
    <fullName>Project_Template__c</fullName>
    <formula>Project__r.strk__ProjectTemplate__r.Name</formula>
    <label>Project Template</label>
    <type>Text</type>
</CustomField>