force-app/main/default/objects/Site_Development_AT_T__c/fields/Project_Template_Category__c.field-meta.xml
<CustomField>
    <fullName>Project_Template_Category__c</fullName>
    <formula>TEXT(Project__r.strk__ProjectTemplate__r.strk__Category__c)</formula>
    <label>Project Template Category</label>
    <type>Text</type>
</CustomField>