force-app/main/default/objects/Site_Development_AT_T__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <formula>Project__r.strk__Site__c</formula>
    <label>Site</label>
    <type>Text</type>
</CustomField>