force-app/main/default/objects/Site_Development_AT_T__c/fields/Site_Development_ABM_HNS__c.field-meta.xml
<CustomField>
    <fullName>Site_Development_ABM_HNS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Development ABM HNS</label>
    <referenceTo>Site_Development_ABM_HNS__c</referenceTo>
    <relationshipLabel>Site Development AT&amp;T</relationshipLabel>
    <relationshipName>Site_Development_AT_T</relationshipName>
    <type>Lookup</type>
</CustomField>